--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile group: 'org.hsqldb', name: 'hsqldb'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server', version: '2.0.1.RELEASE'
+//    compile 'org.springframework.boot:spring-boot-starter-security'
+//    compile 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure'
 
     testCompile 'junit:junit:4.+'
 }
