--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,18 @@ plugins {
 	id 'org.springframework.boot' version '2.0.1.RELEASE'
 }
 
+plugins {
+  id "org.sonarqube" version "3.2.0"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "kovacstimea_SOA"
+    property "sonar.organization", "kovacstimea"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
